--- a/front-end/src/components/Footer.css
+++ b/front-end/src/components/Footer.css
@@ -6,17 +6,18 @@
 .footer {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
-    padding: 3% 10%;
-    margin: 0 auto;
+    padding: 0 10%;
+    margin: 0;
     width: 100%;
     height: 45px;
     position: fixed;
     bottom: 0;
+    box-sizing: border-box; /*IMP*/
 }
 
 .icon{
+    padding-top: 1%;
     color: #1976d2;
     opacity: 0.4;
 }
