--- a/front-end/src/components/Profile.css
+++ b/front-end/src/components/Profile.css
@@ -96,10 +96,10 @@ h4 {
     margin-bottom: 7%;
 }
 
-#jobtitle{
+/* #jobtitle{
     margin-top: 4%;
     margin-left: 2%;
-}
+} */
 
 .field{
     padding-top: 4%;
@@ -108,14 +108,10 @@ h4 {
     margin-bottom: 0;
 }
 
-#more{
-    margin-left: 2%;
-}
-
-#seeall{
+/* #seeall{
     margin-left: 2%;
     margin-bottom: 6%;
-}
+} */
 
 #endpage{
     margin-bottom: 10%;
@@ -135,14 +131,3 @@ h4 {
 #settIcon{
     opacity: 1;
 }
-
-
-/* .textbox{
-    font-size: 14px;
-    margin-bottom: 2%;
-    margin-top: 4%;
-}
-
-.textbox:nth-child(5) {
-    margin-bottom: 6%;
-} */
