--- a/front-end/src/components/Edit.css
+++ b/front-end/src/components/Edit.css
@@ -2,3 +2,20 @@
     margin: 0;
     padding: 0;
 }
+
+.editsCont{
+    margin-top: 0;
+    margin-bottom: 6%;
+    margin-left: 4%;
+    margin-right: 4%;
+}
+
+.topCont{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+#iconDiv{
+    margin-right: 2%;
+}
