--- a/front-end/src/components/EditBox.css
+++ b/front-end/src/components/EditBox.css
@@ -3,18 +3,13 @@
     padding: 0;
 }
 
-#seeButton{
-    color: #145ca4;
-    margin-bottom: 3%;
-}
-
-/* .info{
+.info{
     margin-top: 0;
     margin-left: 0;
     padding-top: 1%;
     font-size: 15px;
-} */
-/* 
+}
+
 .field{
     padding-top: 4%;
     margin-left: 2%;
@@ -28,17 +23,9 @@
     margin-top: 5%;
     margin-left: 3%;
     margin-right: 2%;
-} */
+}
 
-/* .head{
-    display:flex;
-    justify-content: space-between;
-    margin-left: 1%;
-    margin-right: 3%;
-    margin-top: 6%;
-} */
-
-/* .overallCont{
+.overallCont{
     margin-bottom: 10%;
 }
 
@@ -49,4 +36,12 @@
 .textField{
     height: 40px;
     width: 95%;
-} */
+}
+
+.head{
+    display:flex;
+    justify-content: space-between;
+    margin-left: 1%;
+    margin-right: 3%;
+    margin-top: 6%;
+}
